adding References title

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -1958,6 +1958,8 @@ Block MINPAR
     5   [-1000..1000]        # A0(MX)
 \end{verbatim}
 
+\clearpage
+\section*{References}
 
 \begin{thebibliography}{100}
 %% %\cite{Nilles:1983ge}
