put SLHA template file into lstlisting environmetn

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -1899,7 +1899,7 @@ can be found in \secref{Sec:comparison}.
 \section{Speed test SLHA input file}
 \label{sec:speed-test-slha-template-file}
 %
-\begin{verbatim}
+\begin{lstlisting}
 Block MODSEL                 # Select model
     6    0                   # flavour violation
     1    1                   # mSUGRA
@@ -1956,7 +1956,7 @@ Block MINPAR
     3   [1..100]             # tan(beta)(MZ) DRbar
     4   {-1,+1}              # sign(mu)
     5   [-1000..1000]        # A0(MX)
-\end{verbatim}
+\end{lstlisting}
 
 \clearpage
 \section*{References}
