--- a/ChangeLog
+++ b/ChangeLog
@@ -20,7 +20,10 @@ FlexibleSUSY-0.5.4 [not released yet]
  * Bugfix (commit 3fd2699): Correcting the determination of the number
    of EWSB eqs. in case of CP violating models.
 
- * Bugfix (commit ): Reset fermion phases when clear() is called.
+ * Bugfix (commit c9cc34f): Reset fermion phases when clear() is called.
+
+ * Bugfix (commit faa0fb6): adding boost include directory to CPPFLAGS
+   in the src module.
 
  * Set minimum required SARAH version to 4.0.4, because it implements
    the full two-loop VEV beta functions from arXiv:1310.7629 .
