--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -126,7 +126,7 @@ Higgs
            C++}\\ {\em Computer:}\/ Personal computer\\ {\em Operating
            system:}\/ Tested on Linux 3.x\\ {\em Word size:}\/ 64
          bits\\ {\em External routines:}\/ SARAH 4.0.4, Boost library,
-         lapack\\ {\em
+         Eigen, lapack\\ {\em
            Typical running time:}\/ 0.1-0.3 seconds per parameter
          point.\\ {\em Nature of problem:}\/ Determining the mass
          spectrum and mixings for any supersymmetric model. The
