very minor change to english and added comment about B\mu = 0 claim. Wanted to make change when spotted or I'd forget. hope doesn't cause merge problems with Dominik.

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -826,8 +826,8 @@ allows to split the parameters into two classes:
   scalar squared masses.
 \end{enumerate}
 %
-The $\beta$-functions of the SUSY parameters do only depend on the
-SUSY parameters themselfs.  They do not depend on soft-breaking
+The $\beta$-functions of the SUSY parameters only depend on the
+SUSY parameters and are independent of the soft-breaking
 parameters.  However, the $\beta$-functions of the soft-breaking
 parameters depend on all model parameters in general.
 
@@ -1309,7 +1309,7 @@ parameters at the low-scale.
   \code{InitialGuessAtHighScale}) is imposed.  In the example given in
   \secref{Sec:modfile} the superpotential parameter $\mu$ is set to
   the value $1.0$ and its corresponding soft-breaking parameter $B\mu$
-  is set to zero.
+  is set to zero. {\color{red} Is $B\mu$ set to zero, this would be weird and from looking I think it is $A_0$.}
 \item All model parameters are run to the first guess of the low-scale
   (\code{LowScaleFirstGuess})
 \item The EWSB eqs.\ are solved at the tree-level.
