--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -1598,7 +1598,7 @@ separate thread, and therefore benefits from multi-core CPUs.
 \section{Numeric tests}
 
 For checking the correctness of \fs's generated spectrum generators
-extensive unit tests against Softsusy's MSSM, and NMSSM
+extensive unit tests against Softsusy's MSSM and NMSSM
 implementations (both $Z_3$-invariant and $Z_3$-violating variants)
 were done: We checked mass matrices, EWSB equations, one- and two-loop
 $\beta$-functions, one- and two-loop self-energies and one- and
