--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -1032,19 +1032,19 @@ detail, the top quark \DRbar mass is calculated as
 \begin{align}
   \begin{split}
     m_{t,\text{susy}}^{\text{\DRbar}}(\mu) &= m_t^\text{pole} +
-    \re\Sigma_{t}^{S,\text{heavy}}(m_t^\text{pole}) \\
+    \re\Sigma_{t}^{S}(m_t^\text{pole}) \\
     &\phantom{=\;} + m_t^\text{pole}
-    \left[ \re\Sigma_{t}^{L,\text{heavy}}(m_t^\text{pole}) +
-      \re\Sigma_{t}^{R,\text{heavy}}(m_t^\text{pole}) + \Delta
+    \left[ \re\Sigma_{t}^{L}(m_t^\text{pole}) +
+      \re\Sigma_{t}^{R}(m_t^\text{pole}) + \Delta
       m_t^{(1),\text{qcd}} + \Delta m_t^{(2),\text{qcd}} \right] ,
   \end{split}
 \end{align}
 %
-where the $\Sigma_{f}^\text{heavy}$ is the self-energy of fermion $f$
-without the Standard Model contributions.  The labels $L,R,S$ denote
-the left-, right- and non-polarized part of the self-energy.  The
-appearing QCD corrections $\Delta m_t^{(1),\text{qcd}}$ and $\Delta
-m_t^{(2),\text{qcd}}$ are taken from \cite{Bednyakov:2002sf} and read
+where the $\Sigma_{t}$ is the top one-loop self-energy without QCD
+contributions.  The labels $L,R,S$ denote the left-, right- and
+non-polarized part of the self-energy.  The separated QCD corrections
+$\Delta m_t^{(1),\text{qcd}}$ and $\Delta m_t^{(2),\text{qcd}}$ are
+taken from \cite{Bednyakov:2002sf} and read
 %
 \begin{align}
   \Delta m_t^{(1),\text{qcd}} &= -\frac{g_3^2 \left(5-3 \log\left(\frac{m_t^2}{\mu^2}\right)\right)}{12 \pi^2},\\
@@ -1070,10 +1070,10 @@ The \DRbar mass of the bottom quark is calculated as
   m_{b,\text{SM}}^{\text{\DRbar}}(\mu) &=
   m_{b,\text{SM}}^{\text{\MSbar}}(\mu) \left(1 - \frac{\alpha_s}{3
       \pi} - \frac{23}{72} \frac{\alpha_s^2}{\pi^2} + \frac{3
-      g_2^2}{128 \pi^2} + \frac{13 g_Y^2}{1152 \pi^2}\right) .
+      g_2^2}{128 \pi^2} + \frac{13 g_Y^2}{1152 \pi^2}\right) ,
 \end{align}
 %
-The \DRbar mass of the $\tau$ is calculated as
+and the \DRbar mass of the $\tau$ is calculated as
 %
 \begin{align}
   \begin{split}
@@ -1090,9 +1090,12 @@ The \DRbar mass of the $\tau$ is calculated as
   \left(1 - 3 \frac{g_Y^2 - g_2^2}{128 \pi^2}\right).
 \end{align}
 %
-To convert the fermion masses from the \MSbar to the \DRbar scheme the
-Yukawa coupling conversion from \cite[Eq.~(19)]{Skands:2003cj} is used
-and it is assumed that the VEV is defined in the \DRbar scheme.
+In the above equations $\Sigma_{b,\tau}^{\text{heavy}}$ are the
+one-loop self-energies of the bottom and $\tau$, where contributions
+from the gluon and photon are omitted.  To convert the fermion masses
+from the \MSbar to the \DRbar scheme the Yukawa coupling conversion
+from \cite{Martin:1993yx} is used and it is assumed that the VEV is
+defined in the \DRbar scheme.
 
 \subsubsection{Electroweak symmetry breaking}
 \label{sec:ewsb}
