doc/paper.tex: replace --models= by --name= in createmodel command

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -408,7 +408,7 @@ Optional:
 To create a MSSM spectrum generator the following three commands:
 %
 \begin{lstlisting}[language=bash]
-$ ./createmodel --models=MSSM
+$ ./createmodel --name=MSSM
 $ ./configure --with-models=MSSM
 $ make
 \end{lstlisting}%% $
