doc/paper.tex: update address

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -80,12 +80,15 @@ bookmarks=true, linktocpage]{hyperref}
  \title{\Large\bf FlexibleSUSY --- A spectrum generator generator for supersymmetric models}
 
 \author[adelaide]{Peter Athron}
-\author[dresden]{Jae-hyeon Park}
+\author[valencia]{Jae-hyeon Park}
 \author[dresden]{Dominik St\"ockinger}
 \author[dresden]{Alexander Voigt}
 \address[adelaide]{ARC Centre of Excellence for Particle Physics at 
 the Tera-scale, School of Chemistry and Physics, University of Adelaide, 
 Adelaide SA 5005 Australia}
+\address[valencia]{Departament de F\'{i}sica Te\`{o}rica and IFIC,
+Universitat de Val\`{e}ncia-CSIC,
+46100, Burjassot, Spain}
 \address[dresden]{Institut f\"ur Kern- und Teilchenphysik,
 TU Dresden, Zellescher Weg 19, 01069 Dresden, Germany}
    
