doc/paper.tex: insert \@ between a capital letter and \xspace
For a correct intersentence space.

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -32,10 +32,10 @@ pdfkeywords={FlexibleSUSY,supersymmetry,spectrum,generator,MSSM,NMSSM,E6SSM},
 bookmarks=true, linktocpage]{hyperref}
 
 %macros
-\newcommand{\sarah}{SARAH\xspace}
-\newcommand{\fs}{FlexibleSUSY\xspace}
+\newcommand{\sarah}{SARAH\@\xspace}
+\newcommand{\fs}{FlexibleSUSY\@\xspace}
 \newcommand{\mathematica}{Mathematica\xspace}
-\newcommand{\ESSM}{E$_6$SSM\xspace}
+\newcommand{\ESSM}{E$_6$SSM\@\xspace}
 \newcommand{\code}[1]{\lstinline|#1|}  % inline source code
 \newcommand{\textoverline}[1]{$\overline{\mbox{#1}}$}
 \newcommand{\DRbar}{\textoverline{DR}\xspace}
