doc/paper.tex: change "auto-generated" -> "out of the box"
Since the NUHMSSM executable is also auto-generated to some extent.

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -1535,7 +1535,7 @@ E$_6$SSM\cite{King:2005jy}.
 
 By definition, research is an endeavour to find something new.
 Therefore, it can often be the case that
-an auto-generated spectrum generator executable is not enough.
+a spectrum generator right out of the box is not enough.
 \fs attempts to offer a clean interface through which
 one can exploit its facilities
 while undergoing a minimal amount of frustration,
