--- a/ChangeLog
+++ b/ChangeLog
@@ -65,6 +65,9 @@ FlexibleSUSY-0.5.4 [not released yet]
 
  * Allow disable/enable threshold corrections in the SLHA input file.
 
+ * Rename pole mass calculation precision option and set them in the
+   model file.
+
 FlexibleSUSY-0.5.3 [January, 21 2014]
 
  * Bugfix (commit 44903c): correcting malformed print out in
