fix typos in the introduction and add ref. for SuseFlav

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -171,16 +171,16 @@ Higgs
 \section{Introduction}
 Supersymmetry(SUSY) provides the only non-trivial way to extend the
 space-time symmetries of the Poincar\'e
-group\cite{Coleman:1967ad,Haag:1974qh}, leading many to suspect that
+group \cite{Coleman:1967ad,Haag:1974qh}, leading many to suspect that
 SUSY may be realised in nature in some form. In particular
 supersymmetric extensions of the standard model where SUSY is broken
 at the TeV scale have been proposed to solve the hierarchy
-problem\cite{Weinberg:1975gm, Weinberg:1979bn, Gildener:1976ai,
+problem \cite{Weinberg:1975gm, Weinberg:1979bn, Gildener:1976ai,
   Susskind:1978ms, 'tHooft:1980xb}, allow gauge coupling
-unification\cite{Langacker:1990jh, Ellis:1990wk, Amaldi:1991cn,
+unification \cite{Langacker:1990jh, Ellis:1990wk, Amaldi:1991cn,
   Langacker:1991an, Giunti:1991ta} and predict a dark matter candidate
 which can fit the observed relic
-density\cite{Goldberg:1983nd,Ellis:1983ew}.  Such models have also
+density \cite{Goldberg:1983nd,Ellis:1983ew}.  Such models have also
 been used for baryogenesis or leptogensis to solve the
 matter-anti-matter asymmetry of the universe and have been considered
 as the low energy effective models originating from string
@@ -189,7 +189,7 @@ theory.
 Detailed phenomenological studies have been carried out for scenarios
 within the minimal supersymmetric standard model (MSSM).  Such work
 has been greatly aided by public spectrum generators for
-MSSM\cite{Allanach:2001kg,Porod:2003um,Djouadi:2002ze,Baer:1993ae},
+MSSM \cite{Allanach:2001kg,Porod:2003um,Djouadi:2002ze,Baer:1993ae,Chowdhury:2011zr},
 allowing fast and reliable exploration of the sparticle spectrum,
 mixings and couplings, which can be obtained from particular choices
 of breaking mechanism inspired boundary conditions and specified
@@ -239,11 +239,11 @@ possible and to be easily adaptable to changing goals and new
 ideas. \fs is a \mathematica package which uses \sarah to create a
 fast, modular C++ spectrum generator for a user specified SUSY model.
 The generated code structure is designed to be as flexible as possible
-to accommodate different types of extensions and due to it's modular
+to accommodate different types of extensions and due to its modular
 nature it is easy to modify, add new features and combine with other
 programs.  The generated code has been extensively tested against well
-known spectrum generators and as well providing a solution for new
-SUSY models the generated MSSM and NMSSM codes offer a modern and fast
+known spectrum generators. As well as providing a solution for new
+SUSY models, the generated MSSM and NMSSM codes offer a modern and fast
 alternative to the existing public spectrum generators.
 
 In section \ref{Sec:Program} we describe the program in more detail
@@ -3074,6 +3074,15 @@ Large Muon- and electron-Number Nonconservation in Supergravity Theories,}
   Nucl.\ Phys.\ B {\bf 178} (1981) 75.
   %%CITATION = NUPHA,B178,75;%%
   %265 citations counted in INSPIRE as of 10 May 2014
+
+%\cite{Chowdhury:2011zr}
+\bibitem{Chowdhury:2011zr}
+  D.~Chowdhury, R.~Garani and S.~KVempati,
+  %``SUSEFLAV: Program for supersymmetric mass spectra with seesaw mechanism and rare lepton flavor violating decays,''
+  Comput.\ Phys.\ Commun.\  {\bf 184} (2013) 899
+  [arXiv:1109.3551 [hep-ph]].
+  %%CITATION = ARXIV:1109.3551;%%
+  %16 citations counted in INSPIRE as of 03 Jun 2014
 
 \end{thebibliography}
 \end{document}
